chore: update java docs